2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Merged from trunk. limpia_cadena removes
	  unwanted characters instead or replacing them with blank spaces.

2010-11-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_sync_db.pl: Added the synchronization
	script to the 3.1 adapted from trunk

2010-10-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a bug that made the server crash when
	  trying to match an alert with an invalid regular expression. Merged
	  from trunk.
	
	* lib/PandoraFMS/Tools.pm: Fixed a typo.

2010-10-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Enforce HTML decoding on tcp send
	and receive parameters.

	* lib/PandoraFMS/Config.pm: Fixed parsing mta_from.

	* lib/PandoraFMS/Tools.pm: Enforce HTML decoding of mail subject & text.

2010-10-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Update module configuration from XML
	  data files. Merged from trunk.

2010-10-13  Sancho Lerena <slerena@artica.es>

    * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
    due a bug processing some XML with blank spaces.

    * DataServer.pm: Checking for BADXML is 2 times with 2 secs of delay now. 
    Aditional check before deleting / procesing XML.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/SNMPServer.pm
	lib/PandoraFMS/Core.pm: SNMP Trap console doesnt send trap value to
	alert function. Now does :-). Ported from Trunk version.


2010-08-18  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/Core.pm: Alerts now uses _timestamp_ macro with the
        timestamp of the data (if provided), not the present time. Thanks
        to Daniel Vasconcelos for his patch (SF Tracker id #3044326).

	* *.spec. Updated specs, I forgot to commit some changes.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Merged from trunk.

2010-07-02  Sancho Lerena <slerena@artica.es>
