@@ -2,6 +2,7 @@ use 5.000;
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
+	INSTALLSITELIB  => '/usr/lib/perl5',
 	NAME            => 'PandoraFMS',
 	VERSION_FROM    => 'lib/PandoraFMS/Config.pm',
 	AUTHOR 			=> 'Artica ST <info@artica.es>',
